<resources>
    <string name="app_name">WheelChef - chef</string>
    <string name="available">available</string>
    <string name="busy">busy</string>
    <string name="home_fragment">My Menu</string>
    <string name="my_account_fragment">My Account</string>
    <string name="current_order_fragment">Customer Order</string>
    <string name="payment_fragment">Payment</string>
    <string name="history_fragment">History</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_activity_view_dish_detail">View Dish Detail</string>
    <string name="title_activity_order_progress">Order Progress</string>
    <string name="title_activity_view_order_detail">View Order Detail</string>
    <string name="title_activity_create_dish">Create Dish</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_viewchefinfo">View Chef Info</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activity_lyk">Map</string>
    <string name="view_chef_dialog_view_chef_details">View Chef Details</string>
    <string name="view_chef_activity_view_chef_distance">Distance: </string>
    <string name="view_chef_activity_view_chef_time">Delivery Time: </string>
    <string name="prompt_spinner_category">Category: </string>
    <string-array name="spinner_category">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>


    <array name="refresh_colors">
        <item>@color/color_primary</item>
        <item>@color/color_primary</item>
        <item>@color/color_primary_dark</item>
        <item>@color/color_primary_dark</item>
    </array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
